2014-04-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/js/integria.js: Fixed an error on the function
	"bindCompanyAutocomplete".

	* operation/companies/company_detail.php: Added a datepicker
	to the last update input.

2014-04-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php: Added code to process
	or delete an uploaded file via ajax. Now an admin user can
	see the mail tab in a lead.

	* operation/leads/lead_forward.php: Removed the atachment
	files of the forward lead mails.

	* operation/leads/lead_mail.php: Now is possible to send
	files as attachment of the lead mails.

2014-04-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* install.php: Now the data of "integria_dbdata.sql" is
	is used always.

	* integria_demo.sql: Deleted some insertions to adapt the
	file to the new reality.

	* operation/incidents/incident_detail.php,
	  integria_dbdata.php: Minor fixes.

2014-04-04  Sancho Lerena <slerena@artica.es>

	* integria_db.sql,
	integria_dbdata.sql: Fixed broken SQL. Updated some 
	version in SQL.

2014-04-04  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* integria_db.sql: Added the tables `tdownload_type`
	and `tdownload_type_file`.

	* integria_dbdata.sql: The base MR value on `tconfig`
	is now 8.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* incidents/incident_graph.php,
	  include/functions_graph.php: Bugfixes on the D3 graph.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* images/backgrounds,
	  images/backgrounds/tiles.jpg,
	  images/backgrounds/flowers.jpg,
	  images/backgrounds/pandora_4.0.jpg,
	  images/backgrounds/wood.jpg,
	  images/backgrounds/pandora_5.0.png,
	  images/backgrounds/default_4.0.gif,
	  images/backgrounds/grass.jpg,
	  images/backgrounds/wall.jpg: Added files.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Added the functions