@@ -1,3 +1,8 @@
+2014-04-28 Sancho Lerena <slerena@artica.es>
+
+	* operation/newsletter/address_definition.php: Fixed an ACL
+	problem which break address creation from non admin users.
+
 2014-04-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
 	* include/js/integria.js: Fixed an error on the function
